Adding Memory Caching

--- a/HackerNews.Api/HackerNews.Core/HackerNews.Core.csproj
+++ b/HackerNews.Api/HackerNews.Core/HackerNews.Core.csproj
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="EasyCaching.Core" Version="0.8.6" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
 
