--- a/HackerNews.Api/HackerNews.Api/HackerNews.Api.csproj
+++ b/HackerNews.Api/HackerNews.Api/HackerNews.Api.csproj
@@ -5,6 +5,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="EasyCaching.Core" Version="0.8.6" />
+    <PackageReference Include="EasyCaching.InMemory" Version="0.8.6" />
+    <PackageReference Include="EasyCaching.Redis" Version="0.8.6" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
 
